--- a/.cde/workflow.yml
+++ b/.cde/workflow.yml
@@ -21,3 +21,49 @@ phases:
     outputs:
       - type: "github_issues"
         labels: ["cde-task", "{feature_name}"]
+
+  - id: design
+    description: "Create technical design and architecture for the feature."
+    handler: "cde_orchestrator.handlers.design_handler"
+    prompt_recipe: ".cde/prompts/03_design.poml"
+    inputs:
+      - type: "file"
+        path: "specs/features/{feature_name}.md"
+    outputs:
+      - type: "file"
+        path: "specs/design/{feature_name}_design.md"
+
+  - id: implement
+    description: "Implement the feature based on the design specification."
+    handler: "cde_orchestrator.handlers.implement_handler"
+    prompt_recipe: ".cde/prompts/04_implement.poml"
+    inputs:
+      - type: "file"
+        path: "specs/design/{feature_name}_design.md"
+    outputs:
+      - type: "code"
+        path: "src/"
+
+  - id: test
+    description: "Create and run tests for the implemented feature."
+    handler: "cde_orchestrator.handlers.test_handler"
+    prompt_recipe: ".cde/prompts/05_test.poml"
+    inputs:
+      - type: "code"
+        path: "src/"
+    outputs:
+      - type: "tests"
+        path: "tests/"
+
+  - id: review
+    description: "Review and validate the completed feature."
+    handler: "cde_orchestrator.handlers.review_handler"
+    prompt_recipe: ".cde/prompts/06_review.poml"
+    inputs:
+      - type: "code"
+        path: "src/"
+      - type: "tests"
+        path: "tests/"
+    outputs:
+      - type: "review"
+        path: "specs/reviews/{feature_name}_review.md"
