--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ dev = [
     "black>=23.0",
     "mypy>=1.0",
     "isort>=5.0",
+    "types-PyYAML",
+    "pytest-cov",
 ]
 
 [tool.setuptools.packages.find]
@@ -38,11 +40,13 @@ profile = "black"
 line_length = 88
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
+ignore_missing_imports = true
+follow_imports = "silent"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
