--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e .[dev]
+        pip install -e .[dev] --quiet
 
     - name: Lint with flake8
       run: |
@@ -46,7 +46,7 @@ jobs:
       run: isort --check-only --diff src/ tests/
 
     - name: Type check with mypy
-      run: timeout 300 mypy src/ || true
+      run: mypy src/ || true
 
     - name: Run tests
       run: pytest tests/ --cov=src/ --cov-report=xml
