feat: Project Reorganization and Governance Implementation
This commit introduces a comprehensive reorganization of the project structure and implements robust governance mechanisms. The changes ensure better maintainability, clearer documentation, and automated validation of project standards.

Key changes include:

1.  **Documentation Reorganization:**
    *   Moved various .md files from the root directory into a new docs/ directory, categorizing them for better discoverability.
    *   Ensured only README.md, CHANGELOG.md, and CONTRIBUTING.md remain in the root, adhering to project standards.

2.  **Tests Reorganization:**
    *   Moved 	est_onboarding_directly.py to 	ests/integration/.
    *   Created __init__.py files in 	ests/ and 	ests/integration/ to properly structure the test suite.

3.  **Scripts Organization:**
    *   Implemented a new, categorized structure for scripts under the scripts/ directory, including metadata/ and alidation/ subdirectories.

4.  **Metadata Pattern Implementation:**
    *   Introduced document-metadata.md as a standard pattern for document metadata.
    *   Defined standard fields for consistent information capture across documentation.

5.  **Pre-Commit Hooks Enhancement:**
    *   Updated .pre-commit-config.yaml with three new validation hooks:
        *   check-doc-governance: Validates document locations.
        *   alidate-metadata: Ensures YAML frontmatter compliance.
        *   alidate-test-structure: Verifies test organization.

6.  **Validation Scripts Creation:**
    *   Developed alidate-metadata.py for YAML frontmatter validation.
    *   Created alidate-test-structure.py to confirm tests are correctly placed in 	ests/.
    *   Implemented dd-metadata.py for automated metadata addition.
    *   Improved enforce-doc-governance.py with enhanced script validation.

7.  **New Documentation:**
    *   Created document-metadata.md to define the standard metadata pattern.
    *   Documented the executed migration p

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,10 +9,26 @@ repos:
       # Prevent .md files outside designated directories
       - id: check-doc-governance
         name: Check Documentation Governance Rules
-        entry: bash scripts/check-governance.sh
+        entry: bash scripts/validation/check-governance.sh
         language: system
         files: '\.md$'
         pass_filenames: true
+
+      # Validate document metadata (YAML frontmatter)
+      - id: validate-metadata
+        name: Validate Document Metadata
+        entry: python scripts/validation/validate-metadata.py --staged
+        language: system
+        files: '\.md$'
+        pass_filenames: false
+
+      # Validate test structure
+      - id: validate-test-structure
+        name: Validate Test Structure
+        entry: python scripts/validation/validate-test-structure.py --staged
+        language: system
+        files: 'test_.*\.py$'
+        pass_filenames: false
 
   # MARKDOWN LINTING
   - repo: https://github.com/igorshubovych/markdownlint-cli
