chore: governance infrastructure - validation script, enhanced copilot/agents guidance, pre-commit integration
- Add scripts/validation/validate-docs.py: Comprehensive 500+ line Python validation script with 9 validation functions
  - Path normalization for Windows/Linux compatibility
  - YAML frontmatter validation (7 required fields)
  - File naming conventions (lowercase-hyphens-YYYY-MM-DD)
  - Directory structure validation (specs/, agent-docs/, root exceptions)
  - Professional colored output with ASCII symbols (Windows compatible)
  - Pre-commit hook integration with --staged flag
  - Exit codes for CI/CD (0=compliant, 1=violations)

- Enhance .github/copilot-instructions.md section 664-780 (Documentation Governance)
  - Add critical rule section with clear anti-patterns vs correct patterns
  - Expand directory structure table with patterns
  - Add special AI agent instructions subsection
  - Rewrite AI Agent Governance Checklist with 16-point checkbox format (8 DO, 8 DON'T)
  - Add pre-execution question framework
  - Add enforcement mechanisms documentation

- Update .pre-commit-config.yaml
  - Add validate-docs-governance hook using --staged flag
  - Enhanced hook descriptions with validation script reference

- Enhance AGENTS.md with documentation governance section
  - Add 'DON'T: Violate Documentation Governance' anti-pattern with examples
  - Add complete 'Documentation Governance (CRITICAL)' section
  - File placement rules table with patterns and examples
  - Root-level exceptions list with clear NOT allowed patterns
  - YAML frontmatter requirements with all 7 required fields
  - Validation script and pre-commit hook documentation
  - AI Agent Governance Checklist with 8 DO and 8 DON'T items
  - Proper markdown formatting with blank lines between sections

All changes maintain professional, robust, and intelligent governance infrastructure as requested.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,33 +3,28 @@
 # Run manually: pre-commit run --all-files
 
 repos:
-  # DOCUMENTATION GOVERNANCE
+  # DOCUMENTATION GOVERNANCE (Enhanced with DOCUMENTATION_GOVERNANCE.md compliance)
   - repo: local
     hooks:
-      # Prevent .md files outside designated directories (Python-based for Windows compatibility)
-      - id: check-doc-governance
-        name: Check Documentation Governance Rules
-        entry: scripts/validation/enforce-doc-governance.py
-        language: python
+      # Main documentation governance validator (replaces enforce-doc-governance.py)
+      - id: validate-docs-governance
+        name: Validate Documentation Governance Compliance
+        entry: python scripts/validation/validate-docs.py --staged
+        language: system
         files: '\\.md$'
-        pass_filenames: true
-
-      # Validate document metadata (YAML frontmatter) - blocks commit if missing
+        pass_filenames: false
+        stages: [commit]
+        description: "Checks: file location, naming conventions, YAML frontmatter, metadata"
+        
+      # Validate metadata (kept for compatibility)
       - id: validate-metadata
-        name: Validate Document Metadata
-        entry: scripts/validation/validate-metadata.py
-        language: python
+        name: Validate Document Metadata (YAML Frontmatter)
+        entry: python scripts/validation/validate-docs.py --staged
+        language: system
         files: '\\.md$'
         pass_filenames: false
-        args: ['--staged']
         additional_dependencies: ['pyyaml']
-
-      # Validate test structure (organization only)
-      - id: validate-test-structure
-        name: Validate Test Structure
-        entry: scripts/validation/validate-test-structure.py
-        language: python
-        pass_filenames: false
+        stages: [commit]
 
   # MARKDOWN LINTING
   - repo: https://github.com/igorshubovych/markdownlint-cli
