chore(gitignore): Add Rust target dir, coverage patterns, and local CDE issues
- Add target/ for Rust build artifacts
- Add .coverage.* and coverage.json patterns
- Add .cde/issues/ for temporary local issue files

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,14 @@ Thumbs.db
 
 # Coverage
 .coverage
+.coverage.*
+coverage.json
+
+# Rust
+target/
+
+# Local CDE issues (temporary files)
+.cde/issues/
 
 # Wheels
 *.whl
