--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["maturin>=1.0,<2.0"]
+build-backend = "maturin"
 
 [project]
 name = "cde-orchestrator-mcp"
@@ -26,6 +26,7 @@ dev = [
     "isort>=5.0",
     "types-PyYAML",
     "pytest-cov",
+    "maturin>=1.0,<2.0",
 ]
 
 [tool.setuptools.packages.find]
