--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,9 @@ beautifulsoup4>=4.12.0
 # Jules AI Agent SDK
 jules-agent-sdk>=0.1.1
 python-dotenv>=1.0.0
+
+# UI / Notifications
+plyer>=2.1.0  # Cross-platform system notifications
+
+# Progress Reporting
+websocket-client>=1.6.0  # For direct WebSocket progress reporting
