--- a/mcp-status-bar/package.json
+++ b/mcp-status-bar/package.json
@@ -15,6 +15,15 @@
   "activationEvents": ["*"],
   "main": "./out/extension.js",
   "contributes": {
+    "views": {
+      "explorer": [
+        {
+          "id": "mcp-history",
+          "name": "MCP History",
+          "icon": "$(history)"
+        }
+      ]
+    },
     "configuration": {
       "title": "MCP Status Bar",
       "properties": {
