refactor(workflow): move detection logic to separate script for clarity
- Created: scripts/consolidation/detect-old-weeks.py
- Simplified workflow to call Python script instead of inline heredoc
- Maintains same logic: detect old weeks, filter current week
- More maintainable and testable approach

--- a/.github/workflows/auto-consolidate-old-weeks.yml
+++ b/.github/workflows/auto-consolidate-old-weeks.yml
@@ -47,78 +47,7 @@ jobs:
       - name: 🔍 Detect old weeks needing consolidation
         id: detect
         run: |
-          python3 << 'PYTHON_SCRIPT'
-          import os
-          import re
-          from datetime import datetime, timedelta
-          from pathlib import Path
-          from collections import defaultdict
-
-          # Get current ISO week
-          today = datetime.now()
-          current_week = today.isocalendar()
-          current_week_label = f"{current_week.year}-W{current_week.week:02d}"
-
-          print(f"📅 Current week: {current_week_label}")
-
-          # Scan execution and sessions directories
-          directories = [
-              Path("agent-docs/execution"),
-              Path("agent-docs/sessions")
-          ]
-
-          # Skip patterns (already consolidated)
-          skip_patterns = [
-              r"^WEEKLY-CONSOLIDATION-.*\.md$",
-              r"^WEEK-\d{4}-W\d{2}\.md$",
-              r"^weekly-.*\.md$",
-          ]
-
-          # Group files by week
-          weeks = defaultdict(list)
-          for directory in directories:
-              if not directory.exists():
-                  continue
-
-              for file_path in directory.glob("*.md"):
-                  # Skip consolidated files
-                  if any(re.match(pattern, file_path.name) for pattern in skip_patterns):
-                      continue
-
-                  # Extract date
-                  match = re.search(r"(\d{4})-(\d{2})-(\d{2})", file_path.name)
-                  if not match:
-                      continue
-
-                  year, month, day = map(int, match.groups())
-                  date = datetime(year, month, day)
-                  iso_week = date.isocalendar()
-                  week_label = f"{iso_week.year}-W{iso_week.week:02d}"
-
-                  weeks[week_label].append(file_path.name)
-
-          # Find old weeks (not current week)
-          old_weeks = [week for week in weeks.keys() if week != current_week_label]
-          old_weeks.sort()
-
-          if old_weeks:
-              print(f"\n✅ Found {len(old_weeks)} old weeks needing consolidation:")
-              for week in old_weeks:
-                  print(f"   - {week}: {len(weeks[week])} files")
-
-              # Export to GitHub Actions
-              with open(os.environ['GITHUB_OUTPUT'], 'a') as f:
-                  f.write(f"has_old_weeks=true\n")
-                  f.write(f"old_weeks_count={len(old_weeks)}\n")
-                  f.write(f"oldest_week={old_weeks[0]}\n")
-                  f.write(f"current_week={current_week_label}\n")
-          else:
-              print(f"\n⏭️  No old weeks found. All files are from current week {current_week_label}")
-              with open(os.environ['GITHUB_OUTPUT'], 'a') as f:
-                  f.write(f"has_old_weeks=false\n")
-                  f.write(f"current_week={current_week_label}\n")
-
-          PYTHON_SCRIPT
+          python scripts/consolidation/detect-old-weeks.py
 
       - name: 🚀 Run consolidation for old weeks
         if: steps.detect.outputs.has_old_weeks == 'true'
