--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest pytest-cov black ruff isort mypy
+        pip install -e ".[dev]"
+        pip install pytest-asyncio
 
     - name: Run pre-commit hooks
       run: |
@@ -32,4 +32,4 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest
+        pytest tests/ -v --tb=short --asyncio-mode=auto 2>&1 | head -100
