--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,28 @@ build-backend = "maturin"
 [project]
 name = "cde-orchestrator-mcp"
 version = "0.2.0"
-description = "CDE Orchestrator MCP Server for Context-Driven Engineering"
+description = "CDE Orchestrator MCP Server with Rust Performance for Context-Driven Engineering"
 readme = "README.md"
 requires-python = ">=3.11"
+license = {text = "Apache-2.0 OR MIT"}
+authors = [
+    {name = "Ibrahim Bello", email = "iberi22@users.noreply.github.com"}
+]
+keywords = ["mcp", "context-driven-engineering", "ai-orchestration", "rust", "performance"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: Apache Software License",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+    "Programming Language :: Rust",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Operating System :: OS Independent",
+]
 dependencies = [
     "fastmcp==2.13.0",
     "pyyaml",
@@ -16,6 +35,12 @@ dependencies = [
     "lxml",
     "pathspec",
 ]
+
+[project.urls]
+Homepage = "https://github.com/iberi22/CDE-Orchestrator-MCP"
+Documentation = "https://github.com/iberi22/CDE-Orchestrator-MCP/tree/main/docs"
+Repository = "https://github.com/iberi22/CDE-Orchestrator-MCP"
+Changelog = "https://github.com/iberi22/CDE-Orchestrator-MCP/blob/main/CHANGELOG.md"
 
 [project.optional-dependencies]
 dev = [
@@ -30,9 +55,16 @@ dev = [
 ]
 
 [tool.maturin]
+# PyO3 bindings con configuración optimizada
 bindings = "pyo3"
 module-name = "cde_rust_core"
 manifest-path = "rust_core/Cargo.toml"
+# Soportar Python 3.11-3.14
+python-versions = ["3.11", "3.12", "3.13", "3.14"]
+# Strip symbols para wheels más pequeños
+strip = true
+# Incluir archivos de licencia
+include = ["LICENSE", "LICENSE-AGPL-3.0"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
