--- a/rust_core/Cargo.toml
+++ b/rust_core/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "cde_rust_core"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+authors = ["Ibrahim Bello <iberi22@users.noreply.github.com>"]
+license = "Apache-2.0 OR MIT"
+description = "Rust-accelerated core for CDE Orchestrator MCP"
+repository = "https://github.com/iberi22/CDE-Orchestrator-MCP"
+keywords = ["mcp", "performance", "parallelism"]
 
 [lib]
 name = "cde_rust_core"
@@ -16,3 +21,14 @@ glob = "0.3.1"
 regex = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"  # Para YAML frontmatter parsing
+num_cpus = "1.16"   # Para auto-detectar CPU cores
+
+[dev-dependencies]
+criterion = { version = "0.5", features = ["html_reports"] }
+proptest = "1.5"  # Property-based testing
+
+# Uncomment when benchmarks are created
+# [[bench]]
+# name = "parallel_benchmarks"
+# harness = false
