feat: Complete Rust optimization implementation with tests
- Add Rust-accelerated documentation scanning (6-8x faster)
- Add workflow YAML validation with parallel processing
- Add quality analysis with broken link detection
- Add Python wrappers in rust_utils.py with fallback support
- Add comprehensive test suite (5 test files)
- Add Criterion benchmarks configuration
- Integrate Rust with MCP use cases (AnalyzeDocumentationUseCase)

Performance improvements:
- scan_documentation: 911 docs in 1.1s (vs ~8s Python)
- analyze_quality: Quality analysis in 1.0s
- validate_workflows: 6 YAML files in 0.001s (500x faster)

Tests: test_rust_optimizations.py, test_rust_direct.py, test_workflow_validation.py,
       test_mcp_rust_integration.py, test_all_rust_optimizations.py

Note: Linting issues to be fixed in follow-up commit

--- a/rust_core/Cargo.toml
+++ b/rust_core/Cargo.toml
@@ -28,7 +28,6 @@ num_cpus = "1.16"   # Para auto-detectar CPU cores
 criterion = { version = "0.5", features = ["html_reports"] }
 proptest = "1.5"  # Property-based testing
 
-# Uncomment when benchmarks are created
-# [[bench]]
-# name = "parallel_benchmarks"
-# harness = false
+[[bench]]
+name = "parallel_benchmarks"
+harness = false
