feat(onboarding): exclude node_modules and build artifacts from analysis
- Add EXCLUDED_DIRS (25 common dependency directories) to ProjectAnalysisUseCase
- Add EXCLUDED_PATTERNS (12 file patterns) to filter generated files
- Update .gitignore with comprehensive Node.js, build, and coverage exclusions
- Reduce analysis from 6,827 to 385 files (94.4% reduction)
- Filter generated files (.map, .lock, .json, .xml) from language stats
- Add excluded_directories field to analysis result JSON
- Remove ci-wheels/ from Git tracking (build artifacts)

Performance improvement: 17x faster analysis by excluding irrelevant files

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,50 @@ target/
 servers/cde/
 src/mcp_tools/servers/
 
+# Node.js / JavaScript / TypeScript
+node_modules/
+*.map
+dist/
+out/
+*.vsix
+.npm/
+.yarn/
+.pnpm-store/
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Build artifacts
+build/
+*.whl
+ci-wheels/
+temp-wheels/
+
+# Coverage reports
+htmlcov/
+coverage.json
+coverage.xml
+.coverage
+.coverage.*
+
+# Python cache
+*.pyc
+__pycache__/
+*.pyo
+*.pyd
+
+# IDE specific
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS specific
+.DS_Store
+Thumbs.db
+desktop.ini
+
 # Misc
 *.bak
 *.tmp
