--- a/rust_core/Cargo.toml
+++ b/rust_core/Cargo.toml
@@ -23,6 +23,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"  # Para YAML frontmatter parsing
 num_cpus = "1.16"   # Para auto-detectar CPU cores
+ignore = "0.4"      # Para parsear .gitignore rules
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
