--- a/rust_core/Cargo.toml
+++ b/rust_core/Cargo.toml
@@ -28,6 +28,7 @@ ignore = "0.4"      # Para parsear .gitignore rules
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
 proptest = "1.5"  # Property-based testing
+tempfile = "3.8"  # For temporary directories in tests
 
 [[bench]]
 name = "parallel_benchmarks"
