--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,8 +32,8 @@ repos:
     rev: v1.7.0
     hooks:
       - id: mypy
-        args: [--ignore-missing-imports]
-        additional_dependencies: [pydantic]
+        args: [--ignore-missing-imports, --no-error-summary]
+        additional_dependencies: [pydantic, types-requests, types-PyYAML]
 
   # Pyrefly: Fast type checker by Meta/Facebook (local hook)
   # NOTE: Disabled for initial commit (78 errors remaining, down from 123)
