--- a/rust_core/Cargo.toml
+++ b/rust_core/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0"
 serde_yaml = "0.9"  # Para YAML frontmatter parsing
 num_cpus = "1.16"   # Para auto-detectar CPU cores
 ignore = "0.4"      # Para parsear .gitignore rules
+sysinfo = "0.33"    # Para process monitoring (CPU, memoria)
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
